--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0-rc.1",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0-rc.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
@@ -42,8 +42,8 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/node": "^22.15.27",
-    "@types/react": "^18.2.65",
-    "@types/react-dom": "^18.2.21",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
