--- a/package.json
+++ b/package.json
@@ -21,21 +21,21 @@
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-table": "^8.21.3",
+    "@types/react-datepicker": "^6.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react": "19.1.0",
+    "react-datepicker": "^8.4.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
-    "vaul": "^0.9.3",
     "zod": "^3.23.8",
     "zustand": "^5.0.5"
   },
